# bancho-rs

./: Cargo.toml  README.md
src/: main.rs
src/routes/: mod.rs
src/routes/osu/domains/: cho.rs  osu.rs
src/utils/: mod.rs
src/utils/osu/: packet_reader.rs  packet_writer.rs  packets.rs  packets_old.rs  why god.rs
