[package]
name = "bancho-rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 512

[profile.release]
opt-level = 3
lto = true
codegen-units = 512

[dependencies]
actix-web = { version = "4", features = ["macros", "compress-gzip"] }
bincode = { version = "1.3" }
bitflags = "1.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
half = "1.8"
lazy_static = "1.4"
futures-util = "0.3"
futures = "0.3"
cached = { version = "0.34.0", features = ["proc_macro", "redis_tokio"] }
thiserror = "1.0"
